--- a/java-app/Dockerfile
+++ b/java-app/Dockerfile
@@ -2,7 +2,7 @@ FROM tomcat:9.0
 
 RUN rm -rf /usr/local/tomcat/webapps/*
 
-COPY ROOT.war /usr/local/tomcat/webapps/ROOT.war
+COPY java-web-app.war /usr/local/tomcat/webapps/ROOT.war
 
 EXPOSE 8000
 
